# Cortex

./: .gitignore  README.md
backend/: .importlinter  pyproject.toml  requirements-dev.txt  requirements.txt  tmp_trace_mermaid.py
backend/src/cortex/: config.py  main.py
backend/src/cortex/artifacts/application/: use_cases.py
backend/src/cortex/artifacts/domain/: entities.py  interfaces.py
backend/src/cortex/artifacts/infrastructure/: dependencies.py  repository.py
backend/src/cortex/artifacts/presentation/: models.py  router.py
backend/src/cortex/graph/application/: use_cases.py
backend/src/cortex/graph/domain/: entities.py  interfaces.py
backend/src/cortex/graph/infrastructure/: repository.py
backend/src/cortex/graph/presentation/: models.py  router.py
backend/src/cortex/health/presentation/: router.py
backend/src/cortex/jobs/application/: use_cases.py
backend/src/cortex/jobs/domain/: entities.py  interfaces.py
backend/src/cortex/jobs/infrastructure/: pg_repository.py  repository.py
backend/src/cortex/jobs/presentation/: models.py  router.py
backend/src/cortex/pipeline/application/: orchestrator.py
backend/src/cortex/pipeline/domain/: interfaces.py
backend/src/cortex/pipeline/infrastructure/: artifact_generator.py  ast_parser.py  celery_tasks.py  github_client.py  graph_builder.py  stages.py
backend/src/cortex/schema/: models.py
backend/src/shared/: correlation.py  exceptions.py  logging.py
backend/src/worker/: celery_app.py
backend/tests/: conftest.py
backend/tests/unit/: test_ast_parser_logging.py  test_graph_builder.py
(+113 files in other folders)
